# trurl

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Dockerfile  LICENSE  README.md  dev.Dockerfile  mypy.ini  pyproject.toml  setup.py
.devcontainer/: .env  base.yaml  build.sh  compose.yaml  devcontainer.json  on-start-container.sh  on-start-host.sh  on-start-image.sh  pin-deps  run-bash.sh
.github/: BRANCH_PROTECTION_SETUP.md
.github/workflows/: pre-commit.yml  test.yml
prototyping/2025-07_example/: 00_example-notebook.ipynb
tests/: test_import.py  test_prototyping.py
trurl/: conda-export-hook.py  prototyping.py
trurl/cli/: __init__.py  environment.py
