[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
trurl = "trurl.cli:main"

[project]
name = "trurl"
version = "v0.2.0"
description = "Another python package for traceable and reproducible data science."
authors = [
  { name = "Jack Coggins", email = "jackhjfission@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
  "click==8.*",
]

[project.urls]
"Homepage" = "https://github.com/jackhjfission/trurl"

[tool.mypy]
python_executable = "/home/klapaucius/.cache/pypoetry/virtualenvs/trurl-Svf77lXO-py3.12/bin/python"